--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
+# Virtual environment
 myenv/
+
+# Frontend dependencies
+frontend/node_modules/
+
+# Frontend build artifacts
+frontend/build/
+
+# Frontend testing coverage
+frontend/coverage/
+
+# Misc files
+.DS_Store
+
+# Environment variables
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
